# anna-executa-examples

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.github/workflows/: anna-app-publish.yml  anna-app.yml  build-release.yml
docs/: agent-sessions.md  agent-sessions.zh-CN.md  authorization.md  authorization.zh-CN.md  binary-distribution.md  binary-distribution.zh-CN.md  common-pitfalls.md  multi-language-anna-apps.md  multi-language-anna-apps.zh-CN.md  persistent-storage.md  persistent-storage.zh-CN.md  protocol-spec.md  protocol-spec.zh-CN.md  sampling.md  sampling.zh-CN.md
examples/anna-app-aps-files-demo/: .gitignore  README.md  app.json  manifest.json  package.json
examples/anna-app-aps-files-demo/bundle/: app.js  index.html  style.css
examples/anna-app-aps-files-demo/executas/files-via-executa-python/: executa.json  files_via_executa_plugin.py  pyproject.toml
examples/anna-app-aps-files-demo/fixtures/: happy-path.jsonl
examples/anna-app-embed-demo/: README.md  app.json  manifest.json  package.json
examples/anna-app-embed-demo/bundle/: anna-tool-ids.js  app.js  index.html  style.css
examples/anna-app-embed-demo/executas/embed-via-executa-python/: embed_via_executa_plugin.py  executa.json  pyproject.toml
examples/anna-app-embed-demo/fixtures/: happy-path.jsonl
examples/anna-app-focus-flow/: .gitignore  README.md  README.zh-CN.md  app.json  manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/anna-app-focus-flow/bundle/: app.js  index.html  style.css
examples/anna-app-focus-flow/executas/focus-coach/: SKILL.md  executa.json
examples/anna-app-focus-flow/executas/focus-session/: README.md  focus_session_plugin.py  pyproject.toml
examples/anna-app-focus-flow/executas/focus-session-go/: README.md  README.zh-CN.md  executa.json  go.mod  main.go
examples/anna-app-focus-flow/executas/focus-session-node/: README.md  README.zh-CN.md  executa.json  focus_session_plugin.js  package.json
examples/anna-app-focus-flow/executas/focus-session-python/: README.md  README.zh-CN.md  executa.json  focus_session_plugin.py
examples/anna-app-focus-flow/fixtures/: happy-path.jsonl  permission-denied.jsonl
examples/anna-app-focus-flow/scripts/: set-tool-id.py
examples/anna-app-focus-flow/tests/bundle/: app.spec.ts
examples/anna-app-focus-flow/tests/plugin/: test_session_contract.py
examples/anna-app-llm-demo/: README.md  app.json  manifest.json  package.json  pnpm-lock.yaml
examples/anna-app-llm-demo/bundle/: anna-tool-ids.js  app.js  index.html  style.css
examples/anna-app-llm-demo/executas/llm-via-executa-python/: README.md  executa.json  llm_via_executa_plugin.py
examples/anna-app-llm-demo/fixtures/: happy-path.jsonl
examples/anna-app-visual-brand/: README.md  app.json  manifest.json  package.json
examples/anna-app-visual-brand/bundle/: app.js  index.html  style.css
examples/anna-app-visual-brand/fixtures/: happy-path.jsonl
examples/go/: Makefile  README.md  README.zh-CN.md  build.sh  credential_plugin.go  go.mod  google_oauth_plugin.go  main.go
examples/go/sampling-tool/: go.mod  main.go
examples/multifile-binary/python-pyinstaller-onedir/: README.md  README.zh-CN.md  build.sh  main.py  manifest.json  plugin.py  pyinstaller.spec  pyproject.toml
examples/multifile-binary/python-pyinstaller-onedir/data/: greeting.txt
examples/nodejs/: README.md  README.zh-CN.md  build_binary.sh  credential_plugin.js  example_plugin.js  google_oauth_plugin.js  package.json  sampling-tool.js
examples/python/: README.md  README.zh-CN.md  build_binary.sh  credential_plugin.py  example-text-tool.spec  example_plugin.py  google_oauth_plugin.py  pyproject.toml
examples/python/basic-tool/: example_plugin.py  executa.json  pyproject.toml
examples/python/credential-tool/: credential_plugin.py  executa.json  pyinstaller.spec  pyproject.toml
examples/python/executa-agent-demo/: README.md  README.zh-CN.md  executa.json  executa_agent_demo.py  pyproject.toml
examples/python/google-oauth-tool/: executa.json  google_oauth_plugin.py  pyinstaller.spec  pyproject.toml
examples/python/image-poster/: README.md  executa.json  image_poster.py  pyproject.toml
examples/python/image-poster/fixtures/: image.jsonl  upload.jsonl
examples/python/sampling-summarizer/: executa.json  pyinstaller.spec  pyproject.toml  sampling_summarizer.py
examples/python/storage-notebook/: executa.json  pyinstaller.spec  pyproject.toml  storage_notebook.py
sdk/go/: go.mod
sdk/go/host_upload/: host_upload.go
sdk/go/image/: image.go
sdk/go/sampling/: sampling.go
sdk/nodejs/: host_upload.js  image.js  index.js  package.json  sampling.js  storage.js
sdk/python/: pyproject.toml
sdk/python/executa_sdk/: __init__.py  agent.py  storage.py
sdk/python/tests/: test_storage_client.py
