[project]
name = "example-text-tool"
version = "1.0.0"
description = "示例 Executa 插件 — 演示如何创建可被 Anna Agent 调用的文本处理工具"
requires-python = ">=3.10"
authors = [{ name = "Anna Developer" }]
license = { text = "MIT" }

[project.scripts]
example-text-tool = "example_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
