[project]
name = "executa-sdk"
version = "0.1.0"
description = "Anna Executa SDK — Python helpers (sampling, etc.)"
requires-python = ">=3.10"
authors = [{ name = "Anna Developers" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["executa_sdk"]
