[project]
name = "example-text-tool"
version = "1.0.0"
description = "Example Executa plugin — text processing tools (word_count, text_transform, batch_word_count)"
requires-python = ">=3.10"
authors = [{ name = "Anna Developer" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.19.0"]

[project.scripts]
example-text-tool = "example_plugin:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["example_plugin.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
