[project]
name = "storage-notebook"
version = "0.1.1"
description = "Example Executa v2 plugin demonstrating Anna Persistent Storage reverse RPC (storage/* + files/*)."
requires-python = ">=3.10"
authors = [{ name = "Anna Developer" }]
license = { text = "MIT" }
dependencies = [
    "executa-sdk>=0.1.0",
]

[project.scripts]
storage-notebook = "storage_notebook:main"

[tool.uv.sources]
executa-sdk = { path = "../../../sdk/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["storage_notebook.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
